Updated GitHub Workflow

--- a/CoopR-HQ/.github/workflows/main.yml
+++ b/CoopR-HQ/.github/workflows/main.yml
@@ -21,4 +21,6 @@ jobs:
           cache: maven
 
       - name: Step 3 - Have GitHub Actions Build Maven Project
-        run: mvn clean install
+        run: |
+        cd CoopR-HQ
+        mvn clean install
