--- a/CoopR-HQ/coopr-hq-webservice/src/main/resources/application.properties
+++ b/CoopR-HQ/coopr-hq-webservice/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.database = coopr_hq
 server.port = 80
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
