--- a/CoopR-HQ/coopr-hq-webservice/src/main/resources/application.properties
+++ b/CoopR-HQ/coopr-hq-webservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.data.mongodb.database=coopr_hq
-spring.data.mongodb.uri = mongodb+srv://<user>:<password>@<cluster_name>.mongodb.net/<dbname>
+# spring.data.mongodb.uri = mongodb+srv://<user>:<password>@<cluster_name>.mongodb.net/<dbname>
 server.port=80
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
