--- a/CoopR-HQ/coopr-hq-webservice/pom.xml
+++ b/CoopR-HQ/coopr-hq-webservice/pom.xml
@@ -1,13 +1,8 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.coopr</groupId>
-    <artifactId>coopr-hq-webservice</artifactId>
-    <version>0.0.1</version>
-    <packaging>jar</packaging>
-    
-    <name>CoopR HQ WebService</name>
-    <description>CoopR Mod HQ WebService</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -15,6 +10,14 @@
         <version>2.7.3</version>
         <relativePath/>
     </parent>
+
+    <groupId>com.coopr</groupId>
+    <artifactId>coopr-hq-webservice</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    
+    <name>CoopR HQ WebService</name>
+    <description>CoopR Mod HQ WebService</description>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
