--- a/CoopR-HQ/pom.xml
+++ b/CoopR-HQ/pom.xml
@@ -4,20 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.coopr</groupId>
-    <artifactId>coopr-hq</artifactId>
-    <version>0.0.1</version>
-    <packaging>pom</packaging>
-    
-    <name>CoopR HQ</name>
-    <description>CoopR Mod HQ</description>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.3</version>
         <relativePath/>
     </parent>
+
+    <groupId>com.coopr</groupId>
+    <artifactId>coopr-hq</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    
+    <name>CoopR HQ</name>
+    <description>CoopR Mod HQ</description>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
