--- a/CoopR-HQ/coopr-hq-webservice/src/main/resources/application.properties
+++ b/CoopR-HQ/coopr-hq-webservice/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=coopr
+spring.data.mongodb.password=coopr
 spring.data.mongodb.database=coopr_hq
-# spring.data.mongodb.uri = mongodb+srv://<user>:<password>@<cluster_name>.mongodb.net/<dbname>
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.auto-index-creation=true
 server.port=80
-# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
