--- a/CoopR-HQ/coopr-hq-client/pom.xml
+++ b/CoopR-HQ/coopr-hq-client/pom.xml
@@ -72,6 +72,7 @@
     </dependencies>
 
     <build>
+        <finalName>coopr-hq-client-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
@@ -79,7 +80,6 @@
                 <version>1.5</version>
                 <executions>
                     <execution>
-                        <?m2e execute onConfiguration,onIncremental?>
                         <goals>
                             <goal>addTestSources</goal>
                             <goal>testCompile</goal>
