--- a/.github/workflows/coopr-hq-pipeline.yml
+++ b/.github/workflows/coopr-hq-pipeline.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Step 1 - Checkout Main Branch from GitHub
         uses: actions/checkout@v3
 
-      - name: Step 2 - Setup JDK 11
+      - name: Step 2 - Setup JDK 18
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '18'
+          distribution: 'temurin'
           cache: maven
 
       - name: Step 3 - Have GitHub Actions Build Maven Project
